--- a/free-nodes/2024-10-24-free-node-subscribe.htm
+++ b/free-nodes/2024-10-24-free-node-subscribe.htm
@@ -136,16 +136,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-7-13-free-shadowrocket-node.htm" title="7月13日→22.3M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址">7月13日→22.3M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-5-13-shadowrocket-node.htm" title="5月13日→19.4M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址">5月13日→19.4M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-26-free-high-speed-nodes.htm" title="10月26日→19.2M/S|2024年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址，便宜机场推荐">10月26日→19.2M/S|2024年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-7-28-free-ssr-subscribe.htm" title="7月28日→18.3M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址">7月28日→18.3M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-11-clash-node.htm" title="10月11日→19.4M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址">10月11日→19.4M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-5-6-node-share.htm" title="5月6日→19.6M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址">5月6日→19.6M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-16-free-ssr-subscribe.htm" title="6月16日→21.9M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址">6月16日→21.9M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-8-free-shadowrocket-node.htm" title="3月8日22M/S|Clash/SSR/Shadowrocket/V2ray免费节点每天更新订阅链接">3月8日22M/S|Clash/SSR/Shadowrocket/V2ray免费节点每天更新订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-31-shadowrocket-node.htm" title="8月31日→20M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址">8月31日→20M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-7-31-free-clash-subscribe.htm" title="7月31日→22.4M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址">7月31日→22.4M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-7-free-v2ray-subscribe.htm" title="9月7日→18.7M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址">9月7日→18.7M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-1-free-node-subscribe.htm" title="10月1日→21M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址">10月1日→21M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-15-free-clash-subscribe.htm" title="8月15日→18M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址">8月15日→18M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-7-21-free-v2ray-subscribe.htm" title="7月21日→21.8M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址">7月21日→21.8M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-14-free-clash.htm" title="4月14日→20.8M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接">4月14日→20.8M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-21-clash-node-daily-updates.htm" title="8月21日→18.7M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址">8月21日→18.7M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-22-free-node-subscribe.htm" title="6月22日→21.6M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址">6月22日→21.6M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-28-free-subscribe-node.htm" title="8月28日→19.9M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址">8月28日→19.9M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-7-free-subscribe-node.htm" title="5月7日→21.8M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址">5月7日→21.8M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-12-clash-node.htm" title="3月12日19.8M/S|Shadowrocket/SSR/Clash/V2ray免费节点每天更新订阅链接">3月12日19.8M/S|Shadowrocket/SSR/Clash/V2ray免费节点每天更新订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -157,7 +157,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
+                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">29</span> <a href="/date/2024-09/" title="2024-09 归档">2024-09</a></h4>
